IMPORTANT: Remove all previous versions of assembly, assembly dependencies and services before build, install and test this changeset.
- Added bootstrapper (Setup.exe)
- Added bootstrapper UI
- Fixed MSI installer
- Changed assembly dependencies
- Changed standard buttons styles
- Fixed bug #1033: InvalidOperationException in ThemeManager
- Task #1041 completed

--- a/Source code/Elysium/Themes/Buttons/ButtonBase.xaml
+++ b/Source code/Elysium/Themes/Buttons/ButtonBase.xaml
@@ -61,9 +61,9 @@
                 <Setter Property="Foreground" Value="{DynamicResource BackgroundBrush}"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Background" Value="{DynamicResource BackgroundBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource DisabledBrush}"/>
                 <Setter Property="BorderBrush" Value="{DynamicResource DisabledBrush}"/>
-                <Setter Property="Foreground" Value="{DynamicResource DisabledBrush}"/>
+                <Setter Property="Foreground" Value="{DynamicResource BackgroundBrush}"/>
             </Trigger>
         </Style.Triggers>        
     </Style>
