- Fixed bug #1068: Taskbar doesn't show when window is maximized - Fixed bug #1069: When set Window.IsBusy to false initially and then set it to true some time later, the application will crash

--- a/Source code/Elysium/Documentation/en/Elysium.tt
+++ b/Source code/Elysium/Documentation/en/Elysium.tt
@@ -36,6 +36,12 @@
     paths.Add(@"Parameters\ToggleSwitch.en.xml");
     paths.Add(@"Parameters\Window.en.xml");
     
+    paths.Add(@"Exceptions\InvalidStyleException.en.xml");
+	
+    paths.Add(@"Extensions\Collections\IObservableDictionary.en.xml");
+    paths.Add(@"Extensions\Collections\ObservableDictionary.en.xml");
+    paths.Add(@"Extensions\Collections\ObservableKeyValuePair.en.xml");
+    
     paths.Add(@"Extensions\Tree helpers\LogicalTreeHelperExtensions.en.xml");
     paths.Add(@"Extensions\Tree helpers\VisualTreeHelperExtensions.en.xml");
     
