--- a/Source code/Elysium/Themes/Generic.xaml
+++ b/Source code/Elysium/Themes/Generic.xaml
@@ -2357,7 +2357,7 @@
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type controls:Window}">
           <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
-            <Grid>
+            <Grid x:Name="PART_LayoutRoot">
               <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
