Before build previous, this or next changesets, run InstallKeys.bat to install temporary signing keys into your computer - Added Build, Clean and Deploy bat-files - Fixed some issues in setup projects - Fixed bug #1077: When set Window.WindowState to "Maximized", the application will crash - Fixed bug #1078: Window.SizeToContent incorrect behavior

--- a/Source code/Elysium.Test/MainWindow.xaml
+++ b/Source code/Elysium.Test/MainWindow.xaml
@@ -8,7 +8,7 @@
               params:Design.ContrastBrush="White"
               Background="{DynamicResource BackgroundBrush}"
               WindowStartupLocation="CenterScreen"
-              Width="1024" Height="540">
+              SizeToContent="WidthAndHeight">
     <metro:Window.ApplicationBar>
         <metro:ApplicationBar>
             <metro:DropDownCommandButton Header="Theme type"
