--- a/Source code/Elysium/Themes/Windows/Window.xaml
+++ b/Source code/Elysium/Themes/Windows/Window.xaml
@@ -36,7 +36,7 @@
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type controls:Window}">                    
+                <ControlTemplate TargetType="{x:Type controls:Window}">
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
@@ -60,12 +60,12 @@
                                     <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
                                 <controls:ProgressBar x:Name="PART_ProgressBar"
-                                                            Grid.ColumnSpan="3"
-                                                            Grid.Row="0"
-                                                            Background="{StaticResource TransparentBrush}"
-                                                            Value="{TemplateBinding Progress}"
-                                                            VerticalAlignment="Top"
-                                                            Width="{TemplateBinding ActualWidth}" Height="2"/>
+                                                      Grid.ColumnSpan="3"
+                                                      Grid.Row="0"
+                                                      Background="{StaticResource TransparentBrush}"
+                                                      Value="{TemplateBinding Progress}"
+                                                      VerticalAlignment="Top"
+                                                      Height="2"/>
                                 <Border x:Name="PART_Title"
                                         Grid.Column="0"
                                         Grid.Row="1"
